tests/ui/suggestions/suggest-dereferencing-index.stderr
error[E0277]: the type `[{integer}]` cannot be indexed by `&usize`
  --> $DIR/suggest-dereferencing-index.rs:6:42
   |
LL |     let one_item_please: i32 = [1, 2, 3][i];
   |                                          ^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[{integer}]>` is not implemented for `&usize`
   = help: the trait `SliceIndex<[T]>` is implemented for `usize`
   = note: required for `[{integer}]` to implement `Index<&usize>`
help: dereference this index
   |
LL |     let one_item_please: i32 = [1, 2, 3][*i];
   |                                          +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
